<resources>
    <string name="app_name">YesJarvis</string>

    <!-- Onboarding Strings -->
    <string name="onboarding_button_get_jarvis">Get A Jarvis</string>
    <string name="onbarding_screen_1_text_main">Introducing the butler \n you never had</string>
    <string name="onboarding_screen_2_text_main">
        YesJarvis automates your mundane tasks in weekly visits, so you never have to think about them again!
    </string>
    <string name="onboarding_what_is">What is YesJarvis?</string>
    <string name="onboarding_screen_3_text_main">
        You\'ll get paired with your very own carefully vetted Jarvis
    </string>
    <!-- Onboarding END-->

    <!-- YesJarvisServices Names -->
    <string name="jarvis_service_laundry">Laundry</string>
    <string name="jarvis_service_home_cleaning">Home Cleaning</string>
    <string name="jarvis_service_shopping">Grocery Shopping</string>
    <string name="jarvis_service_special_requests">Special Requests</string>
    <string name="jarvis_service_dry_cleaning">Dry Cleaning</string>
    <string name="jarvis_service_tidy_up">Tidy Up</string>
    <!-- YesJarvisServices Names END -->

    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_launcher">SplashLauncherActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_phone_num">UK Phone number</string>
    <string name="action_register">Register</string>
    <string name="action_login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login_test">Login</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="title_activity_freebie">FreebieActivity</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">Test</string>
    <string name="freebie_title">Choose your first service on us</string>
    <string name="title_activity_jarvis_service_preference">Preferences</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="login_redirect">Already have an account? Sign in</string>
    <string name="register_redirect">Don\'t have an account? Sign up</string>
    <string name="error_password_mismatch">Passwords need to match</string>

</resources>
