<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.herokuapp.httpsyesjarvis1.yesjarvis.RegisterActivity"
    android:id="@+id/register_root">


    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/email_textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/logo_register"
        android:layout_marginTop="16dp">

        <customfonts.JarvisEditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:drawableLeft="@drawable/ic_email"
            android:drawableStart="@drawable/ic_email"
            style="@style/AppTheme.JarvisEditText"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/password_textInputLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_textInputLayout">

        <!--TODO: inputType="textPassword" is not giving a correct font for some reason....-->
        <customfonts.JarvisEditText
            android:fontFamily="sans-serif"
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            android:drawableLeft="@drawable/ic_lock"
            android:drawableStart="@drawable/ic_lock"
            style="@style/AppTheme.JarvisEditText"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/password_repeat_textInputLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_textInputLayout">

        <customfonts.JarvisEditText
            android:id="@+id/password_repeat_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password_again"
            android:imeActionId="@+id/password"
            android:imeActionLabel="@string/prompt_password_again"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            android:drawableLeft="@drawable/ic_lock"
            android:drawableStart="@drawable/ic_lock"
            style="@style/AppTheme.JarvisEditText"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/phone_textInputLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_repeat_textInputLayout">

        <customfonts.JarvisEditText
            android:id="@+id/phone_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_phone_num"
            android:imeActionId="@+id/password"
            android:imeActionLabel="@string/prompt_phone_num"
            android:imeOptions="actionUnspecified"
            android:inputType="phone"
            android:maxLines="1"
            android:drawableLeft="@drawable/ic_phone"
            android:drawableStart="@drawable/ic_phone"
            style="@style/AppTheme.JarvisEditText"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_logo"
        android:id="@+id/logo_register"
        android:contentDescription="Logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"/>


    <customfonts.JarvisTextView
        android:text="@string/login_redirect"
        style="@style/AppTheme.JarvisActionButton"
        android:id="@+id/register_login_redirect_text_view"
        app:layout_constraintBottom_toTopOf="@+id/register_ripple_container"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/register_ripple_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:mrl_rippleAlpha="0.2"
        app:mrl_rippleColor="@color/white"
        app:mrl_rippleHover="true"
        app:mrl_rippleOverlay="true">

        <customfonts.JarvisTextView
            android:id="@+id/register_text_view"
            android:text="@string/action_register"
            style="@style/AppTheme.JarvisActionButton.Colored"

            />
    </com.balysv.materialripple.MaterialRippleLayout>


</android.support.constraint.ConstraintLayout>
