<?xml version="1.0" encoding="utf-8"?>
<!--TODO: make text white -->
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingConstraints">

    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="567dp"
        android:id="@+id/guideline9"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="48dp"
        app:layout_constraintGuide_percent="0.125"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="567dp"
        android:id="@+id/guideline10"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="338dp"
        app:layout_constraintGuide_percent="0.88055557"/>

    <android.support.constraint.Guideline
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:id="@+id/guideline11"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="200dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintGuide_percent="0.35273367"/>

    <android.support.constraint.Guideline
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:id="@+id/guideline12"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="57dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintGuide_percent="0.1005291"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:srcCompat="@drawable/yesjarvis_logo"
        android:id="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/guideline12"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="ContentDescription"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"/>


    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/register_email"
        android:hint="@string/prompt_email"
        app:layout_constraintTop_toTopOf="@+id/guideline11"
        android:layout_marginTop="24dp"
        android:textColorHint="@color/white"
        app:layout_constraintLeft_toLeftOf="@+id/guideline9"
        app:layout_constraintRight_toLeftOf="@+id/guideline10"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/register_password"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/register_email"
        app:layout_constraintLeft_toLeftOf="@+id/guideline9"
        app:layout_constraintRight_toLeftOf="@+id/guideline10"
        android:textColorHint="@color/white"
        android:hint="@string/prompt_password"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/register_password_again"
        app:layout_constraintLeft_toLeftOf="@+id/guideline9"
        app:layout_constraintRight_toLeftOf="@+id/guideline10"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/register_password"
        android:hint="@string/prompt_password_again"/>

    <Button
        android:text="@string/action_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/register_button"
        app:layout_constraintLeft_toLeftOf="@+id/guideline9"
        app:layout_constraintRight_toLeftOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="8dp"
        style="@style/AppTheme.Button"
        app:layout_constraintTop_toBottomOf="@+id/register_phone_num"/>

    <TextView
        android:text="@string/action_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_login_redirect_text_view"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/register_button"
        app:layout_constraintRight_toLeftOf="@+id/guideline10"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline9"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/register_phone_num"
        android:textColorHint="@color/white"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/register_password_again"
        app:layout_constraintLeft_toLeftOf="@+id/guideline9"
        app:layout_constraintRight_toLeftOf="@+id/guideline10"
        android:hint="@string/prompt_phone_num"/>
</android.support.constraint.ConstraintLayout>